# OSIR-LMTS

./: LICENSE  Readme.md  Readme_en.md
oslm-crawler/: Home.py  README.md  pyproject.toml
oslm-crawler/config/: dataset-info.json  default_task.yaml  env.yaml  model-info.json  org-links.json  process.yaml  ranking-key-zh.json  ranking-key.json
oslm-crawler/data/: other-source-datasets.jsonl
oslm-crawler/data/2024-12-13/: data-accumulated-rank.csv  data-rank.csv  data-summary.csv  eval-rank.csv  eval-summary.csv  infra-rank.csv  infra-summary.csv  merged-datasets-info.jsonl  merged-models-info.jsonl  model-accumulated-rank.csv  model-accumulated-summary.csv  model-rank.csv  model-summary.csv  overall-accumulated-rank.csv  overall-rank.csv
oslm-crawler/data/2025-01-14/: accumulated-datasets-info.jsonl  accumulated-models-info.jsonl  data-accumulated-summary.csv  data-rank.csv  data-summary-delta.csv  data-summary.csv  eval-rank.csv  eval-summary.csv  infra-rank.csv  infra-summary.csv  merged-datasets-info.jsonl  merged-models-info.jsonl  model-rank.csv  model-summary-delta.csv  model-summary.csv  overall-accumulated-rank.csv  overall-rank.csv
oslm-crawler/data/2025-02-14/: data-accumulated-rank.csv  data-rank.csv  data-summary-delta.csv  data-summary.csv  eval-rank.csv  eval-summary.csv  infra-rank.csv  (+8 more)
oslm-crawler/pages/: 1_Ranking.py  2_Data.py  3_Model.py  4_Infra.py  5_Eval.py
oslm-crawler/scripts/: check_zero_downloads.py  load_eval_summary.py  load_infra_summary.py  modify_screenshot_path.py  process_all.sh
oslm-crawler/tests/: test_core.py
(+277 files in other folders)
